# serval

./: Cargo.toml  serval.sqlite
src/: config.rs  error.rs  main.rs  package.rs  traits.rs
src/storage/: file.rs  mod.rs  sqlite.rs
test_data/py/bar_pkg/: setup.py
test_data/py/bar_pkg/bar_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_data/py/foo_pkg/: setup.py
test_data/py/foo_pkg/foo_pkg.egg-info/: PKG-INFO  SOURCES.txt
