[package]
name = "serval"
version = "0.1.0"
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~3.0.2"

[dependencies.rusqlite]
version = "~0.24.0",
features = ["functions", "blob"]
