[package]
name = "serval"
version = "0.0.1"
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.32"
async-std = { version = "~1.6.5", features = ["attributes"] }
async-trait = "~0.1.41"
thiserror = "~1.0.20"
tide = "~0.14.0"
toml = "~0.5.6"

[dependencies.serde]
version = "~1.0.116"
features = ["derive"]

[dependencies.sqlx]
version = "~0.3.5"
features = ["sqlite", "time", "tls"]

[dev-dependencies]
tempfile = "~3.1.0"
